--- a/web/css/contato.css
+++ b/web/css/contato.css
@@ -5,40 +5,27 @@
 
 /* Orçamento */
 
-.orcamento {
-    background: #000;
-    width: 100%;
-    margin-top: 60px;
+.contato {
     padding: 40px 0;
 }
 
-.orcamento h2 {
-    color: #fec63e;
-}
-
-.orcamento h2::after {
-    background: #fec63e;
-}
-
-.form {
+.contato_form {
     padding-right: 60px;
 }
 
-.form label {
+.contato_form label {
     display: block;
-    color: #FFF;
     font-family: Georgia, 'Times New Roman', serif;
     font-size: 18px;
     line-height: 25px;
     margin-bottom: 4px;
 }
 
-.form input {
+.contato_form input {
     display: block;
     width: 100%;
     border: 4px solid #fec63e;
     background: none;
-    color: #ffffff;
     padding: 7px 0;
     margin-bottom: 10px;
     outline: none;
@@ -46,13 +33,12 @@
     font-family: Georgia, 'Times New Roman', serif;
 }
 
-.form textarea {
+.contato_form textarea {
     display: block;
     width: 100%;
     height: 120px;
     border: 4px solid #fec63e;
     background: none;
-    color: #ffffff;
     padding: 7px 0;
     margin-bottom: 20px;
     outline: none;
@@ -60,16 +46,12 @@
     font-family: Georgia, 'Times New Roman', serif;
 }
 
-.form button {
+.contato_form button {
     background: none;
     padding: 7px 40px;
 }
 
-.orcamento_dados {
-    color: #FFF;
-}
-
-.orcamento_dados h3 {
+.contato_dados h3 {
     font-size: 18px;
     text-transform: uppercase;
     color: #fec63e;
@@ -77,31 +59,36 @@
     font-weight: bold;
 }
 
-.orcamento_dados span {
+.contato_dados span {
     display: block;
     font-size: 18px;
     font-family: Georgia, 'Times New Roman', serif;
     line-height: 30px;
 }
 
-.dados_email {
-    margin-bottom: 40px;
+.contato_dados span:nth-of-type(even) {
+    margin-bottom: 30px;
 }
 
-.orcamento_dados ul {
-    padding-right: 60px;
+.contato_dados ul {
+    margin-top: 10px;
 }
 
-.orcamento_dados ul li {
-    font-family: Georgia, 'Times New Roman', serif;
-    font-size: 14px;
-    padding: 10px 15px;
+.contato_dados ul li {
+    display: inline-block;
+    margin-right: 10px;
 }
 
-.orcamento_dados ul li:nth-last-child(odd) {
-    background: #1d1d1d;
+.contato_dados ul li a {
+    border: 3px solid #fec63c;
+    display: block;
+    padding: 10px;
 }
 
-.orcamento_dados p {
-    margin: 8px 0;
+.contato_dados ul li a:hover {
+    border-color: #000;
+}
+
+.contato_mapa {
+    margin-bottom: 60px;
 }
