--- a/web/css/responsivo.css
+++ b/web/css/responsivo.css
@@ -1,7 +1,25 @@
 /* Estilo para Tablet */
 
 @media only screen and (min-width: 788px) and (max-width: 979px) {
+    
+    /* Qualidade Home */
+    .qualidade::after {
+        right: 66px;
+    }
 
+    .qualidade_lista li {
+        padding: 0 10px;
+    }
+
+    /* Footer */
+    .footer_redes ul li a {
+        padding: 6px;
+    }
+
+    .footer_redes ul li a img {
+        width: 26px;
+        height: 26px;
+    }
 }
 
 /* Estilo para Mobile */
@@ -39,8 +57,22 @@
     /* INTRODUÇÃO */
     .introducao {
         margin-top: 0;
-        padding-top: 20px;
+        padding-top: 40px;
         background: url(../img/bg-mobile.jpg) no-repeat center;
         background-size: cover;
+    }
+
+    .introducao h1 {
+        font-size: 36px;
+    }
+
+    /* Call */
+    .call {
+        padding-top: 10px;
+    }
+
+    /* Qualidade Home */
+    .qualidade::after {
+        display: none;
     }
 }
