:heavy_check_mark: 5-2-7 Responsivo Completo

--- a/web/css/responsivo.css
+++ b/web/css/responsivo.css
@@ -20,7 +20,30 @@
         width: 26px;
         height: 26px;
     }
-}
+
+    /* Produtos */
+    .produto_item h2 {
+        top: -150px;
+        margin-bottom: -56px;
+    }
+
+    .produto_icone {
+        padding: 41px 0;
+    }
+
+    .produto_info p {
+        font-size: 14px;
+        line-height: 20px;
+        padding: 20px 30px;
+        height: 122px;
+    }
+
+    .produto_info ul li {
+        width: 181px;
+        height: 49px;
+    }
+
+} /* FINALI ESTILO TABLET */
 
 /* Estilo para Mobile */
 
@@ -54,6 +77,10 @@
         border-color: #FFF;
     }
 
+    .header_menu ul li a.menu_ativo {
+        border-color: #FFF;
+    }
+
     /* INTRODUÇÃO */
     .introducao {
         margin-top: 0;
@@ -66,6 +93,11 @@
         font-size: 36px;
     }
 
+    /* Introdução Interna */
+    .introducao-interna {
+        margin-top: 0px;
+    }
+
     /* Call */
     .call {
         padding-top: 10px;
@@ -74,5 +106,56 @@
     /* Qualidade Home */
     .qualidade::after {
         display: none;
+    }
+
+    /* Sobre */
+    .missao_sobre p {
+        font-size: 14px;
+        line-height: 20px;
+        padding-right: 0px;
+    }
+
+    .missao_sobre ul li {
+        font-size: 14px;
+        line-height: 25px;
+    }
+
+    /* Produtos */
+    .produto_item h2 {
+        top: -100px;
+        margin-bottom: -68px;
+    }
+
+    .produto_icone {
+        padding: 41px 0;
+    }
+
+    .produto_info p {
+        font-size: 14px;
+        line-height: 20px;
+        height: auto;
+        padding: 20px 30px;
+    }
+
+    .produto_info ul li {
+        width: 149px;
+        height: 49px;
+        font-size: 14px;
+        line-height: 20px;
+        padding-top: 14px;
+    }
+
+    .form {
+        padding-right: 0px;
+    }
+
+    .orcamento_dados ul {
+        padding-right: 0px;
+    }
+
+    /* Contato */
+    .contato_form {
+        padding-right: 0px;
+        margin-bottom: 40px;
     }
 }
