--- a/web/css/style.css
+++ b/web/css/style.css
@@ -382,3 +382,53 @@ img {
     background: #fec63c;
     padding: 20px 0;
 }
+
+/* JAVASCRIPT */
+.js [data-slide]{position:relative}[data-slide]>*{position:absolute;top:0;opacity:0;pointer-events:none}[data-slide]>.active{position:relative;opacity:1;transition:opacity .5s;z-index:1;pointer-events:auto}
+
+.js [data-slide-nav] {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.js [data-slide-nav] button {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    margin: 4px;
+    border: none;
+    padding: 0;
+    border-radius: 6px;
+    text-indent: -99px;
+    overflow: hidden;
+    background: #1d1d1d;
+}
+
+.js [data-slide-nav] button.active {
+    background: #fec63c;
+}
+
+.js [data-anime] {
+    opacity: 0;
+}
+
+/* 7 CSS personalizado dependendo da animação desejada */
+.js .fadeInDown {
+    transform: translate3d(0,-20px,0);
+}
+.js .fadeInUp {
+    transform: translate3d(0,20px,0);
+}
+.js .fadeInRight {
+    transform: translate3d(20px,0,0);
+}
+.js .fadeInLeft {
+    transform: translate3d(-20px,0,0);
+}
+
+.js .anime {
+    opacity: 1;
+    transform: none;
+    transition: transform .8s, opacity .8s;
+}
